--- a/model_and_cfg_zoo/configs/optimize_configs/optimize_yolov7_cfg.yml
+++ b/model_and_cfg_zoo/configs/optimize_configs/optimize_yolov7_cfg.yml
@@ -5,7 +5,7 @@ one_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg_
 quant_one_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/one_model/optimize_yolov7.one
 
 
-input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/xinxin.jpg
+input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/dog.png
 do_preprocess4img: yes
 do_postprocess4net: no
 in_operand_name: images
