--- a/model_and_cfg_zoo/configs/runtime_configs/rt_resnet18.yml
+++ b/model_and_cfg_zoo/configs/runtime_configs/rt_resnet18.yml
@@ -3,12 +3,12 @@
 # 1  follow args you need fill
 do_preprocess4img: yes
 do_postprocess4net: yes
-one_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/resnet18.one
+one_file_path: /home/wanzai/桌面/oneNew/test/model_daily_test/tmp_one_model_path/resnet18/resnet18.one
 input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/dog.png
 in_operand_name: image
 out_operand_name: image
 
-dump_output4each_node: yes
+dump_output4each_node: dump_tracing
 ofmap_folder: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/ofmap4debug/resnet18/
 
 # if you want to do postprocess, please fill this args classification or detection
