--- a/test/model_daily_test/model_daily_test_yml/yolov3.yml
+++ b/test/model_daily_test/model_daily_test_yml/yolov3.yml
@@ -6,7 +6,7 @@ onnx_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg
 do_preprocess4img: yes
 do_postprocess4net: no
 one_file_path: /home/wanzai/桌面/oneNew/test/model_daily_test/tmp_one_model_path/yolov3/yolov3.one
-input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/xinxin.jpg
+input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/dog.png
 in_operand_name: images
 
 dump_ifmap&ofmap: yes
