--- a/model_and_cfg_zoo/configs/metrics_cfgs/metrics_mobilenet_v2.yml
+++ b/model_and_cfg_zoo/configs/metrics_cfgs/metrics_mobilenet_v2.yml
@@ -1,10 +1,10 @@
-# resnet50 metrics config
+# mobilenet_v2 metrics config
 
 do_preprocess: true
 
 do_postprocess: true
 
-one_file_path: /home/wanzai/桌面/oneNew/test/model_daily_test/tmp_one_model_path/resnet50/resnet50.one
+one_file_path: /home/wanzai/桌面/oneNew/test/model_daily_test/tmp_one_model_path/mobilenet_v2/mobilenet_v2.one
 
 metrics_img_label_txt_path: /home/wanzai/桌面/img_name.txt
 
