--- a/device/naive/Argmax/CMakeLists.txt
+++ b/device/naive/Argmax/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.10.1)
 
-project(Argmax)
+project(ArgMax)
 #set(CMAKE_C_FLAGS_RELEASE "-O3")
 set(NN_COMMON "/home/e0006809/Desktop/oneNew-main/infer/common")
 
 include_directories(
         ${NN_COMMON})
 
-add_library(Argmax SHARED argmax.c)
+add_library(ArgMax SHARED argmax.c)
 
