--- a/device/x86/ArgMax/CMakeLists.txt
+++ b/device/x86/ArgMax/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.10.1)
 
-project(Argmax_x86)
+project(ArgMax_x86)
 #set(CMAKE_C_FLAGS_RELEASE "-O3")
 set(NN_COMMON "/home/e0006809/Desktop/oneNew-main/infer/common")
 
 include_directories(
         ${NN_COMMON})
 
-add_library(Argmax_x86 SHARED argmax.c)
+add_library(ArgMax_x86 SHARED argmax.c)
 
