--- a/model_and_cfg_zoo/configs/opt_cfgs/opt_clip_img.yml
+++ b/model_and_cfg_zoo/configs/opt_cfgs/opt_clip_img.yml
@@ -3,13 +3,13 @@
 
 optimize_type: op_fusion
 
-one_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/clip_img.one
+one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/clip_img.one
 
-opt_one_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/opt_clip_img.one
+opt_one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/opt_clip_img.one
 
 calibrate_img_name_txt_path: /home/wanzai/桌面/img_name.txt
 
-calibrate_img_folder: /home/wanzai/桌面/imageNet/
+calibrate_img_folder: /media/wanzai/File/imageNet/
 
 calibrate_img_num: 256
 
