--- a/model_and_cfg_zoo/configs/opt_cfgs/opt_clip_txt.yml
+++ b/model_and_cfg_zoo/configs/opt_cfgs/opt_clip_txt.yml
@@ -1,11 +1,11 @@
 # resnet50 optimize config
 
 
-optimize_type: op_fusion&model_quant
+optimize_type: op_fusion
 
-one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/one_model/resnet50.one
+one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/clip_txt.one
 
-opt_one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/one_model/opt_resnet50.one
+opt_one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/opt_clip_txt.one
 
 calibrate_img_name_txt_path: /home/wanzai/桌面/img_name.txt
 
