--- a/model_and_cfg_zoo/configs/rt_cfgs/rt_clip_img.yml
+++ b/model_and_cfg_zoo/configs/rt_cfgs/rt_clip_img.yml
@@ -4,13 +4,13 @@ do_preprocess: true
 
 do_postprocess: false
 
-one_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/opt_clip_img.one
+one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/opt_clip_img.one
 
 input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/dog.png
 
 model_exc_type: debug
 
-ofmap_folder: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/ofmap4debug/opt_clip_img/
+ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/opt_clip_img/
 
 
 resize_shapes: [256, 256]
