--- a/model_and_cfg_zoo/configs/rt_cfgs/rt_resnet50.yml
+++ b/model_and_cfg_zoo/configs/rt_cfgs/rt_resnet50.yml
@@ -4,13 +4,13 @@ do_preprocess: true
 
 do_postprocess: true
 
-one_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/one_model/opt_resnet50.one
+one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/one_model/opt_resnet50.one
 
 input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/dog.png
 
 model_exc_type: debug
 
-ofmap_folder: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/ofmap4debug/resnet50/
+ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/resnet50/
 
 postprocess_type: classification
 
