--- a/model_and_cfg_zoo/configs/tracing_cfgs/tracing_mobilenet_v2.yml
+++ b/model_and_cfg_zoo/configs/tracing_cfgs/tracing_mobilenet_v2.yml
@@ -10,7 +10,7 @@ input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/dog.png
 
 model_exc_type: tracing
 
-ofmap_folder: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/ofmap4debug/mobilenet_v2/
+ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/mobilenet_v2/
 
 postprocess_type: classification
 
