--- a/test/model_daily_test/model_test_yml/resnet50.yml
+++ b/test/model_daily_test/model_test_yml/resnet50.yml
@@ -1,7 +1,7 @@
 
 # runtime params
 
-onnx_file_path: /home/wanzai/桌面/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/onnx_model/resnet50.onnx
+onnx_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/onnx_model/resnet50.onnx
 
 do_preprocess: true
 
@@ -28,7 +28,7 @@ optimize_type: op_fusion&model_quant
 
 calibrate_img_name_txt_path: /home/wanzai/桌面/img_name.txt
 
-calibrate_img_folder: /home/wanzai/桌面/imageNet/
+calibrate_img_folder: /media/wanzai/File/imageNet/
 
 calibrate_img_num: 128
 
