--- a/model_and_cfg_zoo/configs/rt_cfgs/rt_clip.yml
+++ b/model_and_cfg_zoo/configs/rt_cfgs/rt_clip.yml
@@ -6,7 +6,7 @@ do_postprocess: false
 
 
 one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/one_model/opt_clip_img.one
-img_folder_path: /home/wanzai/桌面/clip_model-img/
+img_folder_path: /home/wanzai/桌面/clip_model-img/aa/
 input_data_path: /home/wanzai/桌面/clip_model-img/dark_horse.jpeg
 
 clip_txt_one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/one_model/opt_clip_txt.one
