--- a/model_and_cfg_zoo/configs/rt_cfgs/rt_mobile_sam.yml
+++ b/model_and_cfg_zoo/configs/rt_cfgs/rt_mobile_sam.yml
@@ -6,18 +6,20 @@ do_postprocess: false
 
 one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/opt_mobile_sam_encoder.one
 
-input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/dog.png
+sam_decoder_one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/todo/opt_mobile_sam_decoder.one
+sam_mask_level: 0
+
+input_data_path: /home/wanzai/桌面/mobile_sam_test_img/t3.jpg
 
 model_exc_type: debug
 
-ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/mobile_sam_encoder/
+ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/mobile_sam_decoder/
 
 
 resize_shapes: [1024, 1024]
 crop_shapes: [1024, 1024]
 normal_mean: [0.485ff, 0.456ff, 0.406ff]
-normal_std: [58.395f, 57.12f, 57.375f]
-#normal_std: [0.229f, 0.224f, 0.225f]
+normal_std: [0.229f, 0.224f, 0.225f]
 
 
 cpu: 12400F
