Optimize the calculation speed of conv

--- a/test/model_daily_test/model_test_yml/resnet50.yml
+++ b/test/model_daily_test/model_test_yml/resnet50.yml
@@ -24,7 +24,7 @@ normal_std: [0.229f, 0.224f, 0.225f]
 
 
 # opt params
-optimize_type: op_fusion&model_quant
+optimize_type: op_fusion
 
 calibrate_img_name_txt_path: /home/wanzai/桌面/img_name.txt
 
