--- a/device/x86/Gemm/CMakeLists.txt
+++ b/device/x86/Gemm/CMakeLists.txt
@@ -5,8 +5,8 @@ project(Gemm_x86)
 #set(CMAKE_C_FLAGS_RELEASE "-O3")
 set (NN_COMMON "/home/e0006809/Desktop/oneNew-main/infer/common")
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -mavx2 -O -g")
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -mavx2 -O -g")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -mavx2 -O3 -g")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -mavx2 -O3 -g")
 
 find_package(OpenMP REQUIRED)
 add_compile_options(-mfma)
