--- a/test/model_daily_test/model_test_yml/resnet50.yml
+++ b/test/model_daily_test/model_test_yml/resnet50.yml
@@ -25,6 +25,7 @@ normal_std: [0.229f, 0.224f, 0.225f]
 
 # opt params
 optimize_type: op_fusion
+#optimize_type: op_fusion&auto_tuning
 
 calibrate_img_name_txt_path: /home/wanzai/桌面/img_name.txt
 
