Modify one function name for each class of OP to 'shape inner'. And split the data preparation of runtime and impl eval into two functions

--- a/model_and_cfg_zoo/configs/metrics_cfgs/metrics_resnet50.yml
+++ b/model_and_cfg_zoo/configs/metrics_cfgs/metrics_resnet50.yml
@@ -4,7 +4,7 @@ do_preprocess: true
 
 do_postprocess: true
 
-one_file_path: /media/wanzai/File/model_and_cfg_and_ofmap_folder/model_and_cfg_zoo/model/onnx_model/resnet50.one
+one_file_path: /home/wanzai/桌面/oneNew/test/model_daily_test/tmp_one_model_path/resnet50/resnet50.one
 
 metrics_img_label_txt_path: /home/wanzai/桌面/img_name.txt
 
