--- a/device/x86/PoseDetect/CMakeLists.txt
+++ b/device/x86/PoseDetect/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.10.1)
 
-project(PoseDetection_x86)
+project(PoseDetect_x86)
 #set(CMAKE_C_FLAGS_RELEASE "-O3")
 set(NN_COMMON "/home/e0006809/Desktop/oneNew-main/infer/common")
 
 include_directories(
         ${NN_COMMON})
 
-add_library(PoseDetection_x86 SHARED pose_detection.c)
+add_library(PoseDetect_x86 SHARED pose_detect.c)
 
