--- a/model_and_cfg_zoo/configs/metrics_cfgs/metrics_resnet18.yml
+++ b/model_and_cfg_zoo/configs/metrics_cfgs/metrics_resnet18.yml
@@ -14,7 +14,7 @@ metrics_img_num: 1000
 
 model_exc_type: efficient_exc
 
-postprocess_type: classification
+postprocess_type: classify
 
 resize_shapes: [256, 256]
 crop_shapes: [224, 224]
