--- a/model_and_cfg_zoo/configs/rt_cfgs/rt_resnet50.yml
+++ b/model_and_cfg_zoo/configs/rt_cfgs/rt_resnet50.yml
@@ -12,7 +12,7 @@ model_exc_type: perf_profiling
 
 ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/resnet50/
 
-postprocess_type: classification
+postprocess_type: classify
 
 resize_shapes: [256, 256]
 crop_shapes: [224, 224]
