--- a/model_and_cfg_zoo/configs/tracing_cfgs/tracing_mobilenet_v2.yml
+++ b/model_and_cfg_zoo/configs/tracing_cfgs/tracing_mobilenet_v2.yml
@@ -12,9 +12,9 @@ model_exc_type: perf_profiling
 
 ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/mobilenet_v2/
 
-postprocess_type: classification
+postprocess_type: classify
 
-# 2  you need fill follow args, if you want to do postprocess and the net is classification
+# 2  you need fill follow args, if you want to do postprocess and the net is classify
 resize_shapes: [256, 256]
 crop_shapes: [224, 224]
 normal_mean: [0.5f, 0.5f, 0.5f]
