--- a/test/model_daily_test/model_test_yml/mobilenet_v2.yml
+++ b/test/model_daily_test/model_test_yml/mobilenet_v2.yml
@@ -23,8 +23,8 @@ normal_mean: [0.485ff, 0.456ff, 0.406ff]
 normal_std: [0.229f, 0.224f, 0.225f]
 
 # opt params
-#optimize_type: op_fusion
-optimize_type: op_fusion&model_quant
+optimize_type: op_fusion
+#optimize_type: op_fusion&model_quant
 #optimize_type: op_fusion&auto_tuning
 
 calibrate_img_name_txt_path: /home/wanzai/桌面/img_name.txt
