--- a/test/model_daily_test/ci_sam_clip/mobile_sam.yml
+++ b/test/model_daily_test/ci_sam_clip/mobile_sam.yml
@@ -11,7 +11,7 @@ model_type: mobile_sam
 
 sam_mask_level: 0
 
-input_data_path: /home/wanzai/桌面/mobile_sam_test_img/t3.jpg
+input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/street.jpg
 
 model_exc_type: efficient_exc
 
