--- a/configs/metrics_cfgs/metrics_resnet50.yml
+++ b/configs/metrics_cfgs/metrics_resnet50.yml
@@ -6,7 +6,7 @@ do_postprocess: true
 
 one_file_path: /home/wanzai/桌面/oneNew/test/model_daily_test/tmp_one_model_path/resnet50/resnet50.one
 
-metrics_img_label_txt_path: /home/wanzai/桌面/img_name.txt
+metrics_img_label_txt_path: /home/wanzai/桌面/oneNew/imgs/imageNet_label.txt
 
 metrics_img_path: /media/wanzai/File/imageNet/
 
