--- a/configs/samples/runtime_sample.yml
+++ b/configs/samples/runtime_sample.yml
@@ -26,7 +26,7 @@
 
       # 3、（必选项）one 模型的绝对路径
       # 注意：这里的路径应该选择你自己的 one 的路径
-      one_file_path: /home/wanzai/桌面/oneNew/test/model_daily_test/tmp_one_model_path/resnet50/resnet50.one
+      one_file_path: /home/wanzai/桌面/oneNew/model_zoo/one_model/resnet50.one
 
       # （可选项）是否将模型的输入输出导出        默认为：false，可选项为：false、true
       dump_ifmap&ofmap: false
@@ -43,7 +43,7 @@
 
       # 6、（必选/可选项）如果 5 中 model_exc_type: ofmap_dumping，则必须指定 out feature map dump 下来的存放路径；如果 model_exc_type 为其他值或者不传参，则这个路径可以为空
       # 注意：这里的路径应该选择一个已有的一个文件夹路径
-      ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/resnet50/
+      ofmap_folder: /home/wanzai/桌面/oneNew/model_zoo/one_model/resnet50/
 
   }
 
