--- a/configs/tracing_cfgs/resnet50.yml
+++ b/configs/tracing_cfgs/resnet50.yml
@@ -4,13 +4,13 @@ do_preprocess: true
 
 do_postprocess: true
 
-one_file_path: /home/wanzai/桌面/oneNew/test/model_daily_test/tmp_one_model_path/resnet50/resnet50.one
+one_file_path: /home/wanzai/桌面/oneNew/model_zoo/one_model/resnet50.one
 
 input_data_path: /home/wanzai/桌面/oneNew/imgs/src_img/dog.png
 
 model_exc_type: perf_profiling
 
-ofmap_folder: /media/wanzai/File/model_and_cfg_and_ofmap_folder/ofmap4debug/resnet50/
+ofmap_folder: /home/wanzai/桌面/oneNew/model_zoo/one_model/resnet50/
 
 postprocess_type: classify
 
